kubernetes-istio/services/overlays/prod/istio/product-composite-routing-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-composite-vs
spec:
  http:
    - match:
        - uri:
            prefix: /product-composite
      route:
        - destination:
            host: product-composite
            port:
              number: 8080
            subset: old
          weight: 100
        - destination:
            host: product-composite
            port:
              number: 8080
            subset: new
          weight: 0
